add new and register pages

--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -38,7 +38,7 @@
 h1{
  
  padding-top: 5%;
- color: #2d3954;
+ color: #5F9EA0;
   font-weight: 600;
   text-transform: capitalize;
   font-size: 35px;
