--- a/src/App.css
+++ b/src/App.css
@@ -51,12 +51,7 @@ button i {
 .heading p {
   color: #72809d;
 }
-textarea,
-input {
-  border: none;
-  outline: none;
-  background: none;
-}
+
 .background {
   padding: 80px 0;
   position: relative;
@@ -65,7 +60,7 @@ input {
 
 .grid5 {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 30px;
 }
 label {
@@ -87,7 +82,7 @@ h4 {
 }
 .grid3 {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 30px;
 }
 img {
@@ -154,6 +149,33 @@ img {
 .mb {
   margin-bottom: 80px;
 }
+form {
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
+  background-color: #f2f2f2;
+  width: 40%;
+  margin: auto;
+ margin-top: 20px;
+ margin-bottom: 30px;
+  padding: 20px;
+  gap: 20px;}
+
+  
+  textarea{
+    width: 90%;
+    background: none;
+  }
+input {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  width: 90%;
+  padding: 10px;
+  
+  background: none;
+}
+
 @media screen and (max-width: 800px) {
   .grid4,
   .grid3,
